--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <p1 id="today">today's wordle word is...</p1>
+    <p1 id="today"></p1>
     <h1 id="word"></h1>
     <a href="https://github.com/st3ph4nnn/semantle-word">github</a>
     <script type="module" src="index.js"></script>
